--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "carbon-crowd-wallet-backend",
+  "name": "Lykos-wallet-backend",
   "version": "1.0.0",
   "description": "Next-generation Web3 wallet backend with ERC-4337 account abstraction",
   "private": true,
